sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:20: error: value or is not a member of Boolean
  } while (echangefait==true or ecart>=1)
                             ^