sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs()
  var lgr=getNombreValeurs()
  var echangefait=false
  var i=0
  do {
    echangefait=false
    if (ecart>1){
      ecart=(ecart.toDouble/1.3).toInt
    }
   i=0
   while (i+ecart<lgr){
     if (!plusPetit(i,i+ecart)){
       echange(i,i+ecart)
       echangefait=true
     }
     i+=1
   }
  } while (echangefait==true or ecart>=1)
}